--- a/JavaScript/2.avancado/client/index.html
+++ b/JavaScript/2.avancado/client/index.html
@@ -59,7 +59,11 @@
         </tfoot>
     </table>
 
-    <script src="js/lib/index.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
+    <script>
+        var n1 = new Negociacao(new Date(), 10, 150.00)
+        console.log(n1.volume)
+    </script>
     
 </body>
 </html>
