--- a/JavaScript/2.avancado/client/index.html
+++ b/JavaScript/2.avancado/client/index.html
@@ -29,14 +29,14 @@
             <input id="valor" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
         </div>
         
-        <button class="btn btn-primary" type="submit" onclick="">Incluir</button>
+        <button class="btn btn-primary" type="submit">Incluir</button>
     </form>
     
     <div class="text-center">
         <button class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
-        <button class="btn btn-primary text-center" type="button">
+        <button class="btn btn-primary text-center" onclick="negociacaoController.apaga()" type="button">
             Apagar
         </button>
     </div> 
@@ -45,13 +45,13 @@
 
     <div id="template-view"></div>
 
-    <script src="js/app/views/View.js"></script>
-    <script src="js/app/views/NegociacoesView.js"></script>
-    <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/models/Mensagem.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
+    <script src="js/app/views/View.js"></script>
+    <script src="js/app/views/NegociacoesView.js"></script>
+    <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/helpers/DateHelper.js"></script>
     <script>
         let negociacaoController = new NegociacaoController()
