--- a/JavaScript/2.avancado/client/index.html
+++ b/JavaScript/2.avancado/client/index.html
@@ -33,7 +33,7 @@
     </form>
     
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
+        <button class="btn btn-primary text-center" onclick="negociacaoController.importaNegociacoes()" type="button">
             Importar Negociações
         </button>
         <button class="btn btn-primary text-center" onclick="negociacaoController.apaga()" type="button">
@@ -55,6 +55,8 @@
     <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
+    <script src="js/app/services/NegociacaoService.js"></script>
+
     <script>
         let negociacaoController = new NegociacaoController()
     </script>
