--- a/JavaScript/0.Exercicios/post.html
+++ b/JavaScript/0.Exercicios/post.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,27 +10,29 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
 </head>
+
 <body class="container">
     <form class="form">
 
         <div class="form-group">
             <label for="data">Data</label>
-            <input type="date" id="data" class="form-control" required autofocus/>        
-        </div>    
+            <input type="date" id="data" class="form-control" required autofocus />
+        </div>
 
         <div class="form-group">
             <label for="quantidade">Quantidade</label>
-            <input type="number" min="1" step="1" id="quantidade" class="form-control" value="1" required/>
+            <input type="number" min="1" step="1" id="quantidade" class="form-control" value="1" required />
         </div>
 
         <div class="form-group">
             <label for="valor">Valor</label>
-            <input id="valor" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
+            <input id="valor" type="number" class="form-control" min="0.01" step="0.01" value="0.0" required />
         </div>
 
         <button class="btn btn-primary" type="submit" onclick="sendPost(event)">Enviar dados para servidor</button>
     </form>
 
+    <script src="/services/HttpService.js"></script>
     <script>
         function sendPost(event) {
 
@@ -37,41 +40,29 @@
 
             console.log("Enviando post");
 
-            const $ = document.querySelector.bind(document);
-            const inputData = $('#data');
-            const inputQuantidade = $('#quantidade');
-            const inputValor = $('#valor');
+            let $ = document.querySelector.bind(document);
+            let inputData = $('#data');
+            let inputQuantidade = $('#quantidade');
+            let inputValor = $('#valor');
 
-            const negociacao = {
+            let negociacao = {
                 data: inputData.value,
                 quantidade: inputQuantidade.value,
                 valor: inputValor.value
             };
 
-            const xhr = new XMLHttpRequest();
-            xhr.open("POST", "/negociacoes", true);
-            xhr.setRequestHeader("Content-type", "application/json");
-
-            xhr.onreadystatechange = () => {
-
-                if (xhr.readyState == 4) {
-
-                    if (xhr.status == 200) {
-                        inputData.value = '';
-                        inputQuantidade.value = 1;
-                        inputValor.value = 0.0;
-                        inputData.focus();
-                        alert('Negociação enviada com sucesso');
-                    } else {
-                        alert(`Não foi possível enviar a negociação: ${xhr.responseText}`);
-                    }
-                }
-            }
-            xhr.send(JSON.stringify(negociacao));
-
-            console.log(`Data: ${negociacao.data}`);
-
-    }
+            new HttpService()
+                .post('/negociacoes', negociacao)
+                .then(() => {
+                    inputData.value = '';
+                    inputQuantidade.value = 1;
+                    inputValor.value = 0.0;
+                    inputData.focus();
+                    window.alert('Negociação enviada com sucesso');
+                })
+                .catch(erro => window.alert(`Não foi possível enviar a negociação: ${erro}`))
+        }
     </script>
 </body>
+
 </html>
